--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   archive: ^3.1.6
   path_provider: ^2.0.7
   image_picker:
+  file_picker: ^4.2.7
+  open_file: ^3.2.1
+
 
 dev_dependencies:
   flutter_test:
